# editor

./: CMakeLists.txt  README.md  edit_session.vim  editor_session.vim
include/: buffer.hpp  edit.hpp  log.hpp  screen.hpp  window.hpp
src/: edit.cpp  log.cpp  screen.cpp  window.cpp
